[package]
name = "ather_cli"
version = "0.1.0"
authors = ["Amit Kumar <amit.kumar@atherenergy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = {git="https://github.com/bytebeamio/rumqtt.git", branch="master"}
tokio = { version = "0.2", features = ["full"] }
rand = "0.7"
argh = "0.1"
futures = "0.3"
async-channel = "1"
log = "0.4"
pretty_env_logger = "0.4"